# ckmeans_py

./: .gitignore  Cargo.toml  README.md  benchmark.py  pyproject.toml
.github/workflows/: CI.yml
ckmeans/: __init__.py
src/: lib.rs
tests/: bench_cpp.py  bench_rust.py  conftest.py  test_benchmark.py  test_ckmeans.py  test_errors.py
